--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,12 +37,24 @@ header .logo a{
     position: relative;
     top: -30px;
     width: 300px;
-    
+}
 
+nav ul{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+nav li{
+    display: inline-block;
+    margin-right: 20px;
 }
 
 /* RESPONSIVE RULES */
 @media screen and (max-width: 715px){
+    header{
+        height: 250px;
+        background-position: 0 -30px;
+    }
     header .mobile{
         display: inline-block;
     }
@@ -51,6 +63,7 @@ header .logo a{
     }
 }
 
+
 /* FEATURES */
  .features{
     background: white;
@@ -58,6 +71,7 @@ header .logo a{
     padding: 20px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
  .features figure{
     margin: auto;
@@ -72,16 +86,6 @@ header .logo a{
     width: 200px;
 }
 
-nav ul{
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-nav li{
-    display: inline-block;
-    margin-right: 20px;
-}
 
 /* FOOTER */
 footer{
